--- a/src/Component/App/App.css
+++ b/src/Component/App/App.css
@@ -8,3 +8,36 @@
   flex-direction: column;
   align-items: center;
 }
+
+img{
+  width: 80%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:-30px;
+  margin-bottom:10px;
+}
+
+.grid-con{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  column-gap: 36px;
+}
+
+.title{
+  text-align: center;
+  font-size: 1.6rem;
+}
+
+.price{
+  text-align: center;
+  margin-bottom: 15px;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.description{
+  text-align:justify
+}
+
