--- a/src/Component/App/App.css
+++ b/src/Component/App/App.css
@@ -20,7 +20,7 @@ img{
 
 .grid-con{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4 , 1fr);
   grid-template-rows: 1fr 1fr;
   column-gap: 36px;
 }
